--- a/style.css
+++ b/style.css
@@ -72,20 +72,19 @@ hr {
 
 /* Main */
 main {
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 30px;
-    display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
     margin-bottom: 30px;
+    display: inline-block;
 }
 
 .gallery {
-    margin-left: 20px;
     margin-bottom: 20px;
-    border: 1px solid rgb(255, 255, 255);
-    float: left;
-    justify-content: space-around;
+    margin-left: 2.3%;
+    display: inline-block;
     background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(255, 255, 255);
 }
 
 .gallery:hover {
@@ -125,4 +124,108 @@ footer {
     font-size: 35px;
     color: rgb(164, 164, 164);
     margin: 10px 0;
+}
+
+
+
+
+/* ---Mobile--- */
+
+
+
+
+/* Nav mobile */
+.nav-mobile {
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: none;
+}
+
+.nav-mobile li{
+    display: inline-block;
+    position: relative;
+    margin: 10px;
+}
+
+.nav-mobile li a {
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+    margin-right: 20px;
+    color: rgb(147, 147, 147);
+}
+
+.nav-mobile li a:hover {
+    color: black;
+}
+
+.nav-mobile .ubicacion {
+    color: black;
+}
+
+
+
+@media only screen and (max-width: 830px) {
+    .page-header {
+        margin-bottom: 0;
+    }
+    .title {
+        position: relative;
+        text-align: center;
+        margin-left: 0;
+    }
+    .nav {
+        display: none;
+    }
+    .nav-mobile {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    body {
+        padding-top: 80px;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+    main {
+        margin-bottom: 0px;
+    }
+    .page-header {
+        margin-bottom: 0;
+    }
+    .title {
+        position: relative;
+        text-align: center;
+        margin-left: 0;
+        font-size: 20px;
+    }
+    .nav {
+        display: none;
+    }
+    .nav-mobile li a {
+        font-size: 10px;
+        margin-right: 5px;
+    }
+    .nav-mobile {
+        display: block;
+    }
+    .gallery {
+        margin-left: 12px;
+    }
+    .gallery img {
+        width: 231px;
+        height: 216px;
+        object-fit: cover;
+    }
+    .description {
+        font-size: 14px;
+    }
+    footer {
+        font-size: 13px;
+    }
+    .links a i {
+        font-size: 25px;
+    }
 }
