--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ footer {
 }
 .links a {
     margin: 0 8px;
+    text-decoration: none;
 }
 .links a i {
     font-size: 35px;
@@ -185,7 +186,7 @@ footer {
 
 @media only screen and (max-width: 375px) {
     body {
-        padding-top: 80px;
+        padding-top: 60px;
         padding-left: 60px;
         padding-right: 60px;
     }
@@ -199,13 +200,13 @@ footer {
         position: relative;
         text-align: center;
         margin-left: 0;
-        font-size: 20px;
+        font-size: 23px;
     }
     .nav {
         display: none;
     }
     .nav-mobile li a {
-        font-size: 10px;
+        font-size: 13px;
         margin-right: 5px;
     }
     .nav-mobile {
